zeit.cms changes
================

1.34 (unreleased)
-----------------

- Nothing changed yet.


1.33 (2009-09-09)
-----------------

- Zurückziehen zieht abhängige Objekte nicht mehr mit zurück.

- Publish- und RetractEvents haben jetzt Informationen über das Objekt, das der
  Benutzer veröffentlichen/zurückziehen wollte.


1.32.1 (2009-09-06)
-------------------

- ObjectPathAttributeProperty kann jetzt ``None`` speichern, ohne "None" als
  Text zu produzieren.


1.32 (2009-09-05)
-----------------

- Site-Steuerung vor Dateiverwaltung (#6159).

- Kurz-Teaser und Homepage-Teaser gibt es nicht mehr (#6161).

- XMLReferenzen beinhalten keine Relateds mehr.

1.31.2 (2009-08-31)
-------------------

- Bessere Fehlerbeschreibung, wenn Bildergruppen referenziert werden, die
  plötzlich keine Bildergruppen mehr sind (#6137).


1.31.1 (2009-08-31)
-------------------

- Metadaten von Bildern in den bearbeiteten Dokumenten gehen nicht mehr kaputt,
  wenn das Bild gelöscht wurde (#6132).


1.31 (2009-08-27)
-----------------

- Neues Feld »Banner-Id« (#6088).

- Neue Optionen »Content« und »Countings« (#6104).


1.30 (2009-08-26)
-----------------

- XML-RPC-Methode ``retract`` um veröffentlichte Inhalte zurückzuziehen
  (#6071).

- »Erstes Related als Box« versteckt (nur Vivi-Skin, #6076).

- Bilder innerhalb von Bildergruppen „erben“ die Metadaten der Bildergruppe,
  bis die Metadaten des Bildes bearbeitet wurden, bzw. das Bild eingecheckt
  wurde (#6073).

- Neue Optionen »Einklappbar« und »Minimalheader« (#6015).

- Neue Felder »Farbwelt« und »Sub-Typ« (#6070).

- Im Ressort-Baum wird die Homepage jetzt explizit angezeigt (#6072).

Technisches
+++++++++++

- Funktion zum Bestimmen der automatischen Veöffentlichungsfähigkeit eines
  Objekts (für #6057) extrahiert.

- Test-Hilfs-Methoden aus zeit.content.cp verschoben.

- `get_working_directory` kann zusätzliche Ersetzungen vornehmen (für #6045).

1.29 (2009-08-21)
-----------------
